Field of law redesign (#2342)
- Remove blurry search and replace it with 3 separate search input fields
- Toggle between direct input and search/exploration in tree
- Highlight search results in tree
- Allow selecting field of law directly from search result list
- Display field of law component in "editable list style"

RISDEV-3581, RISDEV-5342, RISDEV-5347, RISDEV-5349, RISDEV-5344, RISDEV-5414, RISDEV-5417, RISDEV-5489, RISDEV-5541

---------

Co-authored-by: Leonie Koch <leonie.koch@digitalservice.bund.de>